hphp/test/zend/good/zend/bug44913.php
<?php
function something() {
        foreach(array(1, 2) as $value) {
                for($i = 0; $i < 1; $i++) {
                        continue 2;
                }
                return;
        }
}
something();
echo "ok\n";
?>